# pavan

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
src/: airfoil.rs  atmosphere.rs  boundary.rs  bridge.rs  cfd.rs  coefficients.rs  compressible.rs  error.rs  forces.rs  lib.rs  logging.rs  panel.rs  propulsion.rs  stability.rs  vehicle.rs  vlm.rs  wind.rs
src/integration/: soorat.rs
tests/: integration.rs
