[package]
name = "pavan"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Pavan — aerodynamics engine for atmosphere, airfoils, panel methods, VLM, compressible flow, stability, propulsion, and CFD"
homepage = "https://github.com/MacCracken/pavan"
repository = "https://github.com/MacCracken/pavan"
readme = "README.md"
documentation = "https://docs.rs/pavan"
keywords = ["aerodynamics", "airfoil", "lift", "drag", "wind"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
logging = ["dep:tracing-subscriber"]
cfd = ["dep:pravash"]

[dependencies]
hisab = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
pravash = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
